Fix truncation of "Browse topics" button
We were setting its width to 100% - 1.875em, to subtract out the
width of the icon. However, OOUI changed how icons are positioned
so we no longer need to subtract 1.875em.

Bug: T162837

--- a/modules/styles/flow/widgets/mw.flow.ui.NavigationWidget.less
+++ b/modules/styles/flow/widgets/mw.flow.ui.NavigationWidget.less
@@ -37,8 +37,7 @@
 				.oo-ui-labelElement-label {
 					text-overflow: ellipsis;
 					overflow: hidden;
-					// Prevent less compiler from precalculating this expression
-					width: ~'calc( 100% - 1.875em )';
+					width: 100%;
 				}
 			}
 		}
